feat: add org-roam, org-roam-ui and mermaid-mode

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,16 @@
 /.cache/
+/.org-id-locations
 /.smex-items
-/recentf
-/transient/
+/ac-comphist.dat
 /auto-save-list/
-/games/
+/bookmarks
 /elpa/
+/eshell/
+/games/
 /lisp/init-clipboard.el
 /lisp/init-yatex.el
-/eshell/
-/url/
+/org-roam.db
 /pyim/
-/ac-comphist.dat
+/recentf
+/transient/
+/url/
